--- a/cmd/kexpand/BUILD
+++ b/cmd/kexpand/BUILD
@@ -5,6 +5,7 @@ licenses(["notice"])
 load(
     "@io_bazel_rules_go//go:def.bzl",
     "go_binary",
+    "go_test",
 )
 
 go_binary(
@@ -15,5 +16,6 @@ go_binary(
         "@com_github_ghodss_yaml//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "//pkg/expand:go_default_library",
     ],
 )
