adding envsubst to project

--- a/cmd/kexpand/BUILD
+++ b/cmd/kexpand/BUILD
@@ -16,6 +16,7 @@ go_binary(
         "@com_github_ghodss_yaml//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@com_github_a8m_envsubst//:go_default_library",
         "//pkg/expand:go_default_library",
     ],
 )
